Fix jumping of content for laptops

--- a/src/components/List/List.css
+++ b/src/components/List/List.css
@@ -3,7 +3,7 @@
     flex-direction: column;
     justify-content: space-between;
     width: 435px;
-    height: 802px;
+    height: 822px;
     margin: auto;
 }
 
